--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "korisnik/recipes-app",
+    "require": {
+        "mikecao/flight": "^3.15"
+    },
     "autoload": {
         "psr-4": {
             "Korisnik\\RecipesApp\\": "src/"
@@ -10,6 +13,5 @@
             "name": "BelmaSehic",
             "email": "belma.sehic@stu.ibu.edu.ba"
         }
-    ],
-    "require": {}
+    ]
 }
