--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "korisnik/recipes-app",
     "require": {
-        "mikecao/flight": "^3.15"
+        "mikecao/flight": "^3.15",
+        "zircote/swagger-php": "^5.1"
     },
     "autoload": {
         "psr-4": {
